[tool.poetry]
name = "remlapreprocesspy"
version = "4.1.3"
description = "Tool for REMLA backend"
authors = ["Erik Wallinder-Mahler <e.f.w.wallindermaehler@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.7"
Sphinx = "5.0.2"
flake8 = "6.0.0"
python-dotenv = "0.5.1"
tensorflow = "2.16.1"
PyYaml = "6.0.1"
pylint = "2.13.0"
seaborn = "^0.6.0"
Flask = "3.0.3"
flasgger = "0.9.7.1"
scikit-learn = "1.4.2"
Flask-Cors = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
